修复版本问题